packages/elements/src/components/ino-markdown-editor/ino-markdown-editor.scss
@use '../base/new-theme' as theme;
@use '@material/textfield';

/**
  @prop --ino-markdown-editor-min-height: min-height of text editor. Default value is `100px`.
  @prop --ino-markdown-editor-max-height: max-height of text editor Default value is `none`.
  @prop --ino-markdown-editor-font-size: Base font size for all text elements, which scales other font sizes accordingly. Default value is `16px`.

*/

// specific styles for the markdown editor dialog window that opens when having text selected and clicking the "create link" button
.ino-dialog-section {
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
}

.ino-dialog-delete ino-icon {
  --ino-icon-button-icon-color: #{theme.$error};
}

.ino-dialog-form {
  width: 100%;
}

// general styles
$border-radius: 10px;

ino-markdown-editor {
  .markdown-editor {
    border-radius: $border-radius;

    &--readonly {
      .markdown-editor__toolbar {
        display: none;
      }

      .ProseMirror {
        padding: 0;
        border: 0;

        &-focused {
          outline: none;
        }
      }
    }
  }

  .markdown-editor__error-text {
    display: block;
    padding: 10px;
    color: theme.$error;
  }

  .markdown-editor__toolbar {
    display: grid;
    grid-template-columns: auto auto;
    justify-content: space-between;
    border-radius: $border-radius;
    background-color: rgba(theme.$n-1, 0.6);
    padding: 10px 20px;
    margin-bottom: 10px;
  }

  .toolbar__action-button {
    --ino-icon-color-primary: #{theme.$n-9};
    border: 0;
    margin: 0 2px;
    padding: 1px 2px;
    border-radius: $border-radius;
    background-color: transparent;
    font-size: 22px;

    &:hover,
    &--active {
      --ino-icon-color-primary: #{theme.$p-6};
      background-color: theme.$white;
      color: theme.$p-2;
      cursor: pointer;
    }

    &--active {
      box-shadow: 0 2px 6px theme.$n-4;
    }

    ino-icon {
      vertical-align: middle;
      padding: 5px;
    }
  }

  .toolbar__view-mode {
    border-radius: 0;
    margin: 0;

    &:first-of-type {
      border-radius: $border-radius 0 0 $border-radius;
    }
    &:last-of-type {
      border-radius: 0 $border-radius $border-radius 0;
    }
  }

  .toolbar__text-format {
    &--show {
      display: block;
    }
    &--hide {
      display: none;
    }
  }

  .markdown-editor__content__container {
    height: 100%;
    width: 100%;
  }

  .markdown-editor__content {
    overflow: auto;
    max-height: var(--ino-markdown-editor-max-height, none);

    ino-textarea {
      width: 100%;
      height: 100%;

      .mdc-text-field--textarea.mdc-text-field--outlined {
        @include textfield.outline-color(theme.$n-2);
        @include textfield.hover-outline-color(theme.$n-4);

        display: flex;
        .mdc-text-field__input {
          min-height: var(--ino-markdown-editor-min-height, 100px);
          line-height: normal;
          letter-spacing: 0;
        }
      }
    }
  }

  .show-editor {
    display: block;
  }

  .hide-editor {
    display: none;
  }

  .ProseMirror {
    --base-font-size: var(--ino-markdown-editor-font-size, 16px);
    min-height: var(--ino-markdown-editor-min-height, 100px);
    padding: 15px;
    border-radius: 4px;
    border: 1px solid theme.$n-2;
    color: rgba(0, 0, 0, 0.87);
    font-size: var(--base-font-size);

    h1 {
      font-size: calc(var(--base-font-size) * 2);
    }

    h2 {
      font-size: calc(var(--base-font-size) * 1.75);
    }

    &:hover:not(&-focused) {
      border-color: theme.$n-4;
    }
    &-focused {
      outline: theme.$p-5 auto 1px;
    }

    *:first-child {
      margin-top: 0;
      padding-top: 0;
    }
    *:last-child {
      margin-bottom: 0;
      padding-bottom: 0;
    }

    blockquote {
      padding-left: 10px;
      border-left: 3px solid theme.$n-3;
    }

    p {
      margin-top: 0;
      margin-bottom: 1.2em;
    }

    pre code {
      display: block;
      background-color: rgba(theme.$n-3, 0.15);
      white-space: pre;
      -webkit-overflow-scrolling: touch;
      overflow-x: auto;
      max-width: 100%;
      min-width: 100px;
      padding: 6px 8px;
    }

    ul[data-type='taskList'] {
      list-style: none;
    }

    :is(ul, ol)[data-type='taskList'] {
      padding-left: 12px;

      p {
        margin: 0;
      }

      li {
        display: flex;
        > label {
          flex: 0 0 auto;
          margin-right: 0.5rem;
          user-select: none;
        }

        > div {
          flex: 1 1 auto;
          display: inline-block;
        }

        input[type='checkbox'] {
          accent-color: theme.$p-5;
        }
      }
    }
  }
}

